--- a/index.html
+++ b/index.html
@@ -6,9 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
     <link rel="stylesheet" type="text/css" href="main.css">
-    <title>Zee Celest Portfolio</title>
+    <title>Zee Celest Portfolio Wireframe</title>
 </head>
 <body>
+    <main>
+        <img 
+        <div class="hero-image">
+             <div class="hero-text">
+                    <h1>Zee Celest</h1>
+                    <button type="submit" class="submitButton">Meet Zee</button>
+                    <p>WEB DEVELOPER</p>
+                      
+                    </div>
+                  </div>
+    </main>
     
 </body>
 </html>
