--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <main role="main">
         <div class="background-img">
             <img src='https://tinyurl.com/y5n39s3u' alt='ocean landscape'>
+            <section class="hero">
+                <h1>Zee Celest</h1>
+                <p>WEB DEVELOPER</p>
+                <p>"Hi, I’m Zee and I’m a Full Stack Developer with Multimedia Marketing experience!"</p>
+            </section>
         </div>
     <nav role="navigation">
         <ul>
@@ -22,23 +27,8 @@
             <li><a href='#contact'>Contact</a></li>
         </ul>
     </nav>
-   
-        
-        <section class="hero">
-            <h1>Zee Celest</h1>
-            <form>
-                <button type="submit" class="submitButton">Meet Zee</button>
-                <p> </p>
-                <p>WEB DEVELOPER</p>
-            </form>
-        </section>
-        <!-- <div class="hero">
-             <div class="hero-text">
-                     -->
-                      
-            </div>
-        </div>
     </main>
+    <footer></footer>
     <script type="module" src="app.js"></script>
 </body>
 </html>
