--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 </head>
 <body>
     <main role="main">
-        <div class="background-img">
-            <img src='https://tinyurl.com/y5n39s3u' alt='ocean landscape'>
-            <section class="hero">
+        <section class="hero">
+            <header role="banner">
+                <div class="background-img">
+                    <img src='https://tinyurl.com/y5n39s3u' alt='ocean landscape'>
+                </div>
                 <h1>Zee Celest</h1>
                 <p>WEB DEVELOPER</p>
                 <p>"Hi, I’m Zee and I’m a Full Stack Developer with Multimedia Marketing experience!"</p>
-            </section>
-        </div>
+            </header>
+        </section>   
     <nav role="navigation">
         <ul>
             <li><a href='#about'>About Zee</a></li>
@@ -27,8 +29,34 @@
             <li><a href='#contact'>Contact</a></li>
         </ul>
     </nav>
+    <div class="quotes">
+        <p>A man cannot sit down alone to plan for properity.</p>
+        <p>~Nigerian proverb</p>
+    </div>
+    <section id="zee-about">
+        <h2>About Zee</h2>
+        <div>
+            <img class="zee-pic" src="zee.JPG" alt='picture of zee smiling'>
+        </div>
+        <div class="zee-bio">
+            <p>I am a web developer and recent graduate of the Full Stack Immersion Career Path bootcamp at Thinkful.  
+                I enjoy the complexity of coding, as well as the ability to be innovative.  As a creative, coding allows 
+                me to manifest ideas in fun and exciting ways.  Coding is always evolving and developers like myself are 
+                at the forefront of this technical revolution.
+            </p>
+            <p>When I’m not coding you will usually find me sitting behind a blank canvas with a paint brush in my hand.  
+                Arts is a passion of mine that allows me to recreate the reality around me. I love spending time with my 
+                sons, dogs, friends and family whenever I can tear myself away from my computer. 
+            </p>
+        </div>
+        </section>
+
+        
+    </section>
     </main>
-    <footer></footer>
+    <footer>
+        <a href="/link-tindex" class="button">~ Home ~</a> 
+    </footer>
     <script type="module" src="app.js"></script>
 </body>
 </html>
