adding sections to html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p>A man cannot sit down alone to plan for properity.</p>
         <p>~Nigerian proverb</p>
     </div>
-    <section id="zee-about">
+    <section id="about">
         <h2>About Zee</h2>
         <div>
             <img class="zee-pic" src="zee.JPG" alt='picture of zee smiling'>
@@ -49,10 +49,25 @@
                 sons, dogs, friends and family whenever I can tear myself away from my computer. 
             </p>
         </div>
-        </section>
-
-        
     </section>
+    <section>
+        <h2>Projects</h2>
+        <p>I am passionate about coding and excited to share with you some of my work.</p>
+        </h2>
+    </section>
+    <section id="contact">
+        <h2>Contact Zee</h2>
+            <ul>
+                <li><a href="https://github.com/zeecelest"><img src="https://tinyurl.com/y2myycyq" alt='GitHub logo'></a></li>
+                <li><a href="www.linkedin.com/in/zeecelest>"<i class="fa fa-linkedin-square" style="font-size:36px"></i>"</li>
+
+            </ul>
+    </section>
+
+    </section>
+
+
+   
     </main>
     <footer>
         <a href="/link-tindex" class="button">~ Home ~</a> 
