--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         <h2>Contact Zee</h2>
             <ul>
                 <li><a href="https://github.com/zeecelest"><img src="https://tinyurl.com/y2myycyq" alt='GitHub logo'></a></li>
-                <li><a href="www.linkedin.com/in/zeecelest">img src="" alt="LinkedIn logo"</a><i class="fa fa-linkedin-square" style="font-size:36px"></i>"</li>
-                <li><a href="https://twitter.com/zeecelest"><img src="" alt="Twitter logo"></a></li>
-                <li><a href="mailto:zeecelest@gmail.com"><img src="" alt="Gmail logo"></a></li>
+                <li><a href="www.linkedin.com/in/zeecelest"><img src="https://tinyurl.com/yxm2kwwp" alt="LinkedIn logo"></a></li>
+                <li><a href="https://twitter.com/zeecelest"><img src="https://tinyurl.com/yydlodm7" alt="Twitter logo"></a></li>
+                <li><a href="mailto:zeecelest@gmail.com"><img src="https://tinyurl.com/yxw79xsp" alt="Gmail logo"></a></li>
 
             </ul>
     </section>
