working on getting menu items to work

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 <p>"Hi, I’m Zee and I’m a Full Stack Developer with Multimedia Marketing experience!"</p>
             </header>
         </section>   
-    <nav role="navigation">
-        <ul>
-            <li><a href='#about'>About Zee</a></li>
+    <nav role="navigation" >
+        <ul class="nav-link" id="js-nav-link">
+            <li ><a href='#about'>About Zee</a></li>
             <li><a href='#mywork'>Projects</a></li>
             <li><a href='#skills'>Skills</a></li>
             <li><a href='#contact'>Contact</a></li>
@@ -59,7 +59,7 @@
         <h2>Contact Zee</h2>
             <ul>
                 <li><a href="https://github.com/zeecelest"><img src="https://tinyurl.com/y2myycyq" alt='GitHub logo'></a></li>
-                <li><a href="www.linkedin.com/in/zeecelest"><img src="https://tinyurl.com/yxm2kwwp" alt="LinkedIn logo"></a></li>
+                <li><a href="https://www.linkedin.com/in/zeecelest"><img src="https://tinyurl.com/yxm2kwwp" alt="LinkedIn logo"></a></li>
                 <li><a href="https://twitter.com/zeecelest"><img src="https://tinyurl.com/yydlodm7" alt="Twitter logo"></a></li>
                 <li><a href="mailto:zeecelest@gmail.com"><img src="https://tinyurl.com/yxw79xsp" alt="Gmail logo"></a></li>
 
