added jquery script

--- a/index.html
+++ b/index.html
@@ -50,10 +50,15 @@
             </p>
         </div>
     </section>
-    <section>
+    <section id="zee-projects">
         <h2>Projects</h2>
         <p>I am passionate about coding and excited to share with you some of my work.</p>
         </h2>
+    </section>
+    <section id="zee-skills">
+        <ul>
+            <a href="<i class="fas fa-address-card"></i>
+        </ul>
     </section>
     <section id="contact">
         <h2>Contact Zee</h2>
@@ -72,8 +77,9 @@
    
     </main>
     <footer>
-        <a href="/link-tindex" class="button">~ Home ~</a> 
+        <a href="/link-index" class="button">~ Home ~</a> 
     </footer>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="module" src="app.js"></script>
 </body>
 </html>
