--- a/index.html
+++ b/index.html
@@ -81,5 +81,6 @@
     </footer>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="module" src="app.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
