--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <link rel="shortcut icon" href="">
     <title>Zee Celest Portfolio Wireframe</title>
 </head>
+
 <body>
     <main role="main">
         <section class="hero">
@@ -20,67 +22,67 @@
                 <p>WEB DEVELOPER</p>
                 <p>"Hi, I’m Zee and I’m a Full Stack Developer with Multimedia Marketing experience!"</p>
             </header>
-        </section>   
-    <nav role="navigation" >
-        <ul class="nav-link" id="js-nav-link">
-            <li ><a href='#about'>About Zee</a></li>
-            <li><a href='#mywork'>Projects</a></li>
-            <li><a href='#skills'>Skills</a></li>
-            <li><a href='#contact'>Contact</a></li>
-        </ul>
-    </nav>
-    <div class="quotes">
-        <p>A man cannot sit down alone to plan for properity.</p>
-        <p>~Nigerian proverb</p>
-    </div>
-    <section id="about">
-        <h2>About Zee</h2>
-        <div>
-            <img class="zee-pic" src="zee.JPG" alt='picture of zee smiling'>
+        </section>
+        <nav role="navigation">
+            <ul class="nav-link" id="js-nav-link">
+                <li><a href='#about'>About Zee</a></li>
+                <li><a href='#mywork'>Projects</a></li>
+                <li><a href='#contact'>Contact</a></li>
+            </ul>
+        </nav>
+        <div class="quotes">
+            <p>A man cannot sit down alone to plan for properity.</p>
+            <p>~Nigerian proverb</p>
         </div>
-        <div class="zee-bio">
-            <p>I am a web developer and recent graduate of the Full Stack Immersion Career Path bootcamp at Thinkful.  
-                I enjoy the complexity of coding, as well as the ability to be innovative.  As a creative, coding allows 
-                me to manifest ideas in fun and exciting ways.  Coding is always evolving and developers like myself are 
-                at the forefront of this technical revolution.
-            </p>
-            <p>When I’m not coding you will usually find me sitting behind a blank canvas with a paint brush in my hand.  
-                Arts is a passion of mine that allows me to recreate the reality around me. I love spending time with my 
-                sons, dogs, friends and family whenever I can tear myself away from my computer. 
-            </p>
-        </div>
-    </section>
-    <section id="zee-projects">
-        <h2>Projects</h2>
-        <p>I am passionate about coding and excited to share with you some of my work.</p>
-        </h2>
-    </section>
-    <section id="zee-skills">
-        <ul>
-            <a href="<i class="fas fa-address-card"></i>
-        </ul>
-    </section>
-    <section id="contact">
-        <h2>Contact Zee</h2>
+        <section id="about">
+            <h2>About Zee</h2>
+            <div>
+                <img class="zee-pic" src="zee.JPG" alt='picture of zee smiling'>
+            </div>
+            <div class="zee-bio">
+                <p>I am a web developer and recent graduate of the Full Stack Immersion Career Path bootcamp at
+                    Thinkful.
+                    I enjoy the complexity of coding, as well as the ability to be innovative. As a creative, coding
+                    allows
+                    me to manifest ideas in fun and exciting ways. Coding is always evolving and developers like myself
+                    are
+                    at the forefront of this technical revolution.
+                </p>
+                <p>When I’m not coding you will usually find me sitting behind a blank canvas with a paint brush in my
+                    hand.
+                    Arts is a passion of mine that allows me to recreate the reality around me. I love spending time
+                    with my sons, dogs, friends and family whenever I can tear myself away from my computer.
+                </p>
+            </div>
+        </section>
+        <section id="zee-projects">
+            <h2>Projects</h2>
+            <p>I am passionate about coding and excited to share with you some of my work.</p>
+            </h2>
+        </section>
+        <section id="contact">
+            <h2>Contact Zee</h2>
             <ul>
-                <li><a href="https://github.com/zeecelest"><img src="https://tinyurl.com/y2myycyq" alt='GitHub logo'></a></li>
-                <li><a href="https://www.linkedin.com/in/zeecelest"><img src="https://tinyurl.com/yxm2kwwp" alt="LinkedIn logo"></a></li>
-                <li><a href="https://twitter.com/zeecelest"><img src="https://tinyurl.com/yydlodm7" alt="Twitter logo"></a></li>
-                <li><a href="mailto:zeecelest@gmail.com"><img src="https://tinyurl.com/yxw79xsp" alt="Gmail logo"></a></li>
+                <li><a href="https://github.com/zeecelest"><img src="https://tinyurl.com/y2myycyq"
+                            alt='GitHub logo'></a></li>
+                <li><a href="https://www.linkedin.com/in/zeecelest"><img src="https://tinyurl.com/yxm2kwwp"
+                            alt="LinkedIn logo"></a></li>
+                <li><a href="https://twitter.com/zeecelest"><img src="https://tinyurl.com/yydlodm7"
+                            alt="Twitter logo"></a></li>
+                <li><a href="mailto:zeecelest@gmail.com"><img src="https://tinyurl.com/yxw79xsp" alt="Gmail logo"></a>
+                </li>
 
             </ul>
-    </section>
+        </section>
 
-    </section>
-
-
-   
+        </section>
     </main>
     <footer>
-        <a href="/link-index" class="button">~ Home ~</a> 
+        <a href="/link-index" class="button">~ Home ~</a>
     </footer>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="module" src="app.js"></script>
-    <script type="module" src="app.js"></script>
+    <script type="module" src="index.js"></script>
 </body>
+
 </html>
