--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <main role="main">
         <section class="hero">
-            <header role="banner">
+            <header role="banner" class="background-img">
                 <div class="background-img">
                     <img src='https://tinyurl.com/y5n39s3u' alt='ocean landscape'>
                 </div>
@@ -26,7 +26,7 @@
         <nav role="navigation">
             <ul class="nav-link" id="js-nav-link">
                 <li><a href='#about'>About Zee</a></li>
-                <li><a href='#mywork'>Projects</a></li>
+                <li><a href='#projects'>Projects</a></li>
                 <li><a href='#contact'>Contact</a></li>
             </ul>
         </nav>
@@ -55,7 +55,7 @@
                 </p>
             </div>
         </section>
-        <section id="zee-projects">
+        <section id="projects">
             <h2>Projects</h2>
             <p>I am passionate about coding and excited to share with you some of my work.</p>
             </h2>
@@ -80,9 +80,8 @@
     <footer>
         <a href="/link-index" class="button">~ Home ~</a>
     </footer>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script type="module" src="app.js"></script>
-    <script type="module" src="index.js"></script>
+    <!-- <script type="module" src="app.js"></script>
+    <script type="module" src="index.js"></script> -->
 </body>
 
 </html>
