--- a/index.html
+++ b/index.html
@@ -6,23 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
+    <link href="https://fonts.googleapis.com/css?family=Playball|Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="shortcut icon" href="">
     <title>Zee Celest Portfolio Wireframe</title>
+    <script src="https://kit.fontawesome.com/7a6a6a3446.js" crossorigin="anonymous"></script> 
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    
 </head>
 
 <body>
     <main role="main">
         <section class="hero">
             <header role="banner" class="background-img">
-                <h1>Zee Celest</h1>
-                <p>WEB DEVELOPER</p>
-                <p>"Hi, I’m Zee and I’m a Full Stack Developer with Multimedia Marketing experience!"</p>
+                <div class="bannerHeading">
+                    <h1>Zee Celest</h1>
+                    <h3>WEB DEVELOPER</h3>
+                        <p></p>
+                        <p class="zeeQuote">"Hi, I’m Zee and I’m a Full Stack Developer with Multimedia Marketing experience!"</p>
+                </div>
+                
             </header>
         </section>
         <nav role="navigation">
             <ul class="nav-link" id="js-nav-link">
-                <li><a href='#about'>About Zee</a></li>
                 <li><a href='#projects'>Projects</a></li>
                 <li><a href='#contact'>Contact</a></li>
             </ul>
