adding css code

--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
         </section>
         <nav role="navigation">
             <ul class="nav-link" id="js-nav-link">
-                <li><a href='#projects'>Projects</a></li>
-                <li><a href='#contact'>Contact</a></li>
+                <li><a href='#nav-link-about' id="nav-link-about">About Zee</a></li>
+                <li><a href='#nav-link-projects'id="nav-link-projects">Projects</a></li>
+                <li><a href='#nav-link-contact' id="nav-link-contacts">Contact</a></li>
             </ul>
         </nav>
-        <div class="quotes">
-            <p>A man cannot sit down alone to plan for properity.</p>
-            <p>~Nigerian proverb</p>
+        <div class="quotes" id="js-quotes">
+            <h2>A man cannot sit down alone to plan for properity.</h2>
+            <p class= "quote-Author" id="js-quoteAuthor"> ~ Nigerian proverb</p>
         </div>
         <section id="about">
             <h2>About Zee</h2>
