fixed scaling issue with banner image

--- a/index.html
+++ b/index.html
@@ -10,34 +10,31 @@
     <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="shortcut icon" href="">
     <title>Zee Celest Portfolio Wireframe</title>
-    <script src="https://kit.fontawesome.com/7a6a6a3446.js" crossorigin="anonymous"></script> 
+    <script src="https://kit.fontawesome.com/7a6a6a3446.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    
+
 </head>
 
 <body>
+    <header role="banner" class="background-img hero">
+        <div class="bannerHeading">
+            <h1>Zee Celest</h1>
+            <h3>WEB DEVELOPER</h3>
+            <p></p>
+            <p class="zeeQuote">"Hi, I’m Zee and I’m a Full Stack Developer with Multimedia Marketing experience!"</p>
+        </div>
+    </header>
     <main role="main">
-        <section class="hero">
-            <header role="banner" class="background-img">
-                <div class="bannerHeading">
-                    <h1>Zee Celest</h1>
-                    <h3>WEB DEVELOPER</h3>
-                        <p></p>
-                        <p class="zeeQuote">"Hi, I’m Zee and I’m a Full Stack Developer with Multimedia Marketing experience!"</p>
-                </div>
-                
-            </header>
-        </section>
         <nav role="navigation">
             <ul class="nav-link" id="js-nav-link">
-                <li><a href='#nav-link-about' id="nav-link-about">About Zee</a></li>
-                <li><a href='#nav-link-projects'id="nav-link-projects">Projects</a></li>
-                <li><a href='#nav-link-contact' id="nav-link-contacts">Contact</a></li>
+                <li><a href='#about' id="nav-link-about">About Zee</a></li>
+                <li><a href='#projects' id="nav-link-projects">Projects</a></li>
+                <li><a href='#contact' id="nav-link-contacts">Contact</a></li>
             </ul>
         </nav>
         <div class="quotes" id="js-quotes">
             <h2>A man cannot sit down alone to plan for properity.</h2>
-            <p class= "quote-Author" id="js-quoteAuthor"> ~ Nigerian proverb</p>
+            <p class="quote-Author" id="js-quoteAuthor"> ~ Nigerian proverb</p>
         </div>
         <section id="about">
             <h2>About Zee</h2>
@@ -79,12 +76,9 @@
 
             </ul>
         </section>
-
+        <!-- <a href="/link-index" class="button">~ Home ~</a> -->
         </section>
     </main>
-    <footer>
-        <a href="/link-index" class="button">~ Home ~</a>
-    </footer>
     <!-- <script type="module" src="app.js"></script>
     <script type="module" src="index.js"></script> -->
 </body>
