working on getting hover to work for nav-link

--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
 </head>
 
 <body>
-    <header role="banner" class="background-img hero">
-        <div class="bannerHeading">
+    <main role="main">
+        <header role="banner" class="hero">
             <h1>Zee Celest</h1>
+        </header>
+        <div class="bannerHeading">
             <h3>WEB DEVELOPER</h3>
             <p></p>
             <p class="zeeQuote">"Hi, I’m Zee and I’m a Full Stack Developer with Multimedia Marketing experience!"</p>
         </div>
-    </header>
-    <main role="main">
         <nav role="navigation">
             <ul class="nav-link" id="js-nav-link">
-                <li><a href='#about' id="nav-link-about">About Zee</a></li>
-                <li><a href='#projects' id="nav-link-projects">Projects</a></li>
-                <li><a href='#contact' id="nav-link-contacts">Contact</a></li>
+                <li><a href='#about' id="-js-nav-link-about">About Zee</a></li>
+                <li><a href='#projects' id="js-nav-link-projects">Projects</a></li>
+                <li><a href='#contact' id="js-nav-link-contacts">Contact</a></li>
             </ul>
         </nav>
         <div class="quotes" id="js-quotes">
