--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Zee Celest Portfolio Wireframe</title>
     <script src="https://kit.fontawesome.com/7a6a6a3446.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-
+    <style type="text/css">.tab { margin-left: 40px; }</style>
 </head>
 
 <body>
@@ -42,24 +42,26 @@
                 <img class="zee-pic" src="zee.JPG" alt='picture of zee smiling'>
             </div>
             <div class="zee-bio">
-                <p>I am a web developer and recent graduate of the Full Stack Immersion Career Path bootcamp at
-                    Thinkful.
-                    I enjoy the complexity of coding, as well as the ability to be innovative. As a creative, coding
-                    allows
-                    me to manifest ideas in fun and exciting ways. Coding is always evolving and developers like myself
-                    are
-                    at the forefront of this technical revolution.
+                <p class="tab">I am a web developer </p> and 
+                    at Thinkful. I enjoy the complexity of coding, as well as the 
+                    ability to be innovative. As a creative, coding allows me to 
+                    manifest ideas in fun and exciting ways. Coding is always 
+                    evolving and developers like myself are at the forefront 
+                    of this technical revolution.
                 </p>
-                <p>When I’m not coding you will usually find me sitting behind a blank canvas with a paint brush in my
-                    hand.
-                    Arts is a passion of mine that allows me to recreate the reality around me. I love spending time
-                    with my sons, dogs, friends and family whenever I can tear myself away from my computer.
+                </p>
+                <p class="tab">When I’m not coding </p>you will usually find me 
+                    sitting behind a blank canvas with a paint brush in my hand.  
+                    Arts is a passion of mine that allows me to recreate 
+                    the reality around me. I love spending time with my sons, dogs, 
+                    friends and family whenever I can tear myself away from my computer.
                 </p>
             </div>
         </section>
         <section id="projects">
             <h2>Projects</h2>
-            <p>I am passionate about coding and excited to share with you some of my work.</p>
+            <p class="tab">I am passionate </p>about coding and excited to 
+                share with you some of my work.
             </h2>
         </section>
         <section id="contact">
@@ -73,7 +75,6 @@
                             alt="Twitter logo"></a></li>
                 <li><a href="mailto:zeecelest@gmail.com"><img src="https://tinyurl.com/yxw79xsp" alt="Gmail logo"></a>
                 </li>
-
             </ul>
         </section>
         <!-- <a href="/link-index" class="button">~ Home ~</a> -->
