--- a/index.html
+++ b/index.html
@@ -57,12 +57,14 @@
                     friends and family whenever I can tear myself away from my computer.
                 </p>
             </div>
+            <button type="reset" class="zee-home">Home</button>
         </section>
         <section id="projects">
             <h2>Projects</h2>
             <p class="tab">I am passionate </p>about coding and excited to 
                 share with you some of my work.
             </h2>
+            <button type="reset" class="zee-home">Home</button>
         </section>
         <section id="contact">
             <h2>Contact Zee</h2>
@@ -76,6 +78,7 @@
                 <li><a href="mailto:zeecelest@gmail.com"><img src="https://tinyurl.com/yxw79xsp" alt="Gmail logo"></a>
                 </li>
             </ul>
+            <button type="reset" class="zee-home">Home</button>
         </section>
         <!-- <a href="/link-index" class="button">~ Home ~</a> -->
         </section>
