--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </ul>
         </nav>
         <div class="quotes" id="js-quotes">
-            <h2>A man cannot sit down alone to plan for properity.</h2>
+            <h2>A man cannot sit down alone to plan for prosperity.</h2>
             <p class="quote-Author" id="js-quoteAuthor"> ~ Nigerian proverb</p>
         </div>
         <section id="about">
@@ -69,14 +69,15 @@
         <section id="contact">
             <h2>Contact Zee</h2>
             <ul>
+                <li><a href="mailto:zeecelest@gmail.com"><img src="https://tinyurl.com/yxw79xsp" alt="Gmail logo"></a>
+                    </li>
                 <li><a href="https://github.com/zeecelest"><img src="https://tinyurl.com/y2myycyq"
                             alt='GitHub logo'></a></li>
                 <li><a href="https://www.linkedin.com/in/zeecelest"><img src="https://tinyurl.com/yxm2kwwp"
                             alt="LinkedIn logo"></a></li>
                 <li><a href="https://twitter.com/zeecelest"><img src="https://tinyurl.com/yydlodm7"
                             alt="Twitter logo"></a></li>
-                <li><a href="mailto:zeecelest@gmail.com"><img src="https://tinyurl.com/yxw79xsp" alt="Gmail logo"></a>
-                </li>
+               
             </ul>
             <button type="reset" class="zee-home">Home</button>
         </section>
