added home button

--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
                     friends and family whenever I can tear myself away from my computer.
                 </p>
             </div>
-            <button type="reset" class="zee-home">Home</button>
+            <a accesskey="home" id="home" href="../index.html">Home</a>
         </section>
         <section id="projects">
             <h2>Projects</h2>
             <p class="tab">I am passionate </p>about coding and excited to 
                 share with you some of my work.
             </h2>
-            <button type="reset" class="zee-home">Home</button>
+            <a accesskey="home" id="home" href="../index.html">Home</a>
         </section>
         <section id="contact">
             <h2>Contact Zee</h2>
@@ -79,7 +79,7 @@
                             alt="Twitter logo"></a></li>
                
             </ul>
-            <button type="reset" class="zee-home">Home</button>
+            <a accesskey="home" id="home" href="../index.html">Home</a>
         </section>
         <!-- <a href="/link-index" class="button">~ Home ~</a> -->
         </section>
