working on projects page

--- a/index.html
+++ b/index.html
@@ -63,7 +63,24 @@
             <h2>Projects</h2>
             <p class="tab">I am passionate </p>about coding and excited to 
                 share with you some of my work.
-            </h2>
+            <ul class="project" id="project">
+                <img src="Quiz App Screenshot.png">
+                <li>Title: Outer Space Quiz App</li>
+                <li>Description: This app is designed to test users knowledge of space.  
+                    It asks 5 multiple choice questions and lets the user know their 
+                    progress along the way.  The user will know how well they scored at t
+                    he end of the quiz.</li>
+                <li>Technologies used: 
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>JQuery</li>
+                </li>
+                <div class="liveAppLink">
+                <a href="https://thinkful-ei-heron.github.io/zee_shannon_quiz_app/">Live App</a>
+                    <a href="https://github.com/thinkful-ei-heron/zee_shannon_quiz_app">GitHub Repo</a>
+                </div>    
+            </ul>
             <a accesskey="home" id="home" href="../index.html">Home</a>
         </section>
         <section id="contact">
