--- a/index.html
+++ b/index.html
@@ -42,15 +42,17 @@
                 <img class="zee-pic" src="zee.JPG" alt='picture of zee smiling'>
             </div>
             <div class="zee-bio">
-                <p class="tab">I am a web developer </p> and 
-                    at Thinkful. I enjoy the complexity of coding, as well as the 
-                    ability to be innovative. As a creative, coding allows me to 
-                    manifest ideas in fun and exciting ways. Coding is always 
-                    evolving and developers like myself are at the forefront 
-                    of this technical revolution.
+                <p class="tab">I am a web developer and recent graduate of the </p>
+                    Engineering Immersion Career Path bootcamp at Thinkful. I enjoy 
+                    the complexity of coding, as well as the ability to be innovative. 
+                    As a creative person, coding allows me to manifest ideas in fun and 
+                    exciting ways. Coding is always evolving and developers like myself 
+                    are at the forefront of this technical revolution. I am looking forward 
+                    to working with an amazing team of programmers to lead the way to new 
+                    software innovations.
                 </p>
                 </p>
-                <p class="tab">When I’m not coding </p>you will usually find me 
+                <p class="tab">When I’m not coding you will usually find me </p>
                     sitting behind a blank canvas with a paint brush in my hand.  
                     Arts is a passion of mine that allows me to recreate 
                     the reality around me. I love spending time with my sons, dogs, 
@@ -73,7 +75,7 @@
                     It asks 5 multiple choice questions and lets the user know their 
                     progress along the way.  The user will know how well they scored at t
                     he end of the quiz.</li>
-                <p></p>
+                <p>
                 <h4>Technologies used: </h4>
                     <li>HTML</li>
                     <li>CSS</li>
