working on mobile first view with css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
         <div class="bannerHeading">
             <h3>WEB DEVELOPER</h3>
             <p></p>
-            <p class="zeeQuote">"Hi, I’m Zee and I’m a Full Stack Developer with Multimedia Marketing experience!"</p>
+            <p class="zeeQuote">"Hi, I’m Zee
+              and I’m a<br> Full Stack Developer <br>
+              with Multimedia <br>Marketing<br> 
+                experience!"</p>
         </div>
         <nav role="navigation">
             <ul class="nav-link" id="js-nav-link">
@@ -33,7 +36,7 @@
             </ul>
         </nav>
         <div class="quotes" id="js-quotes">
-            <h2>A man cannot sit down alone to plan for prosperity.</h2>
+            <h2>A man cannot <br>sit down alone <br>to plan for <br>prosperity.</h2>
             <p class="quote-Author" id="js-quoteAuthor"> ~ Nigerian proverb</p>
         </div>
         <section id="about">
@@ -42,7 +45,7 @@
                 <img class="zee-pic" src="zee.JPG" alt='picture of zee smiling'>
             </div>
             <div class="zee-bio">
-                <p class="tab">I am a web developer and recent graduate of the </p>
+                <p class="tab">I am a web <br>developer and <br>recent <br>graduate of the<br> 
                     Engineering Immersion Career Path bootcamp at Thinkful. I enjoy 
                     the complexity of coding, as well as the ability to be innovative. 
                     As a creative person, coding allows me to manifest ideas in fun and 
