mobile first 300px screen size

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <h3>WEB DEVELOPER</h3>
             <p></p>
             <p class="zeeQuote">"Hi, I’m Zee
-              and I’m a<br> Full Stack Developer <br>
-              with Multimedia <br>Marketing<br> 
+              and I’m a Full Stack Developer
+              with Multimedia Marketing<br> 
                 experience!"</p>
         </div>
         <nav role="navigation">
@@ -36,7 +36,7 @@
             </ul>
         </nav>
         <div class="quotes" id="js-quotes">
-            <h2>A man cannot <br>sit down alone <br>to plan for <br>prosperity.</h2>
+            <h2>A man cannot sit down alone to plan for prosperity.</h2>
             <p class="quote-Author" id="js-quoteAuthor"> ~ Nigerian proverb</p>
         </div>
         <section id="about">
@@ -45,7 +45,7 @@
                 <img class="zee-pic" src="zee.JPG" alt='picture of zee smiling'>
             </div>
             <div class="zee-bio">
-                <p class="tab">I am a web <br>developer and <br>recent <br>graduate of the<br> 
+                <p>I am a web developer and recent graduate of the 
                     Engineering Immersion Career Path bootcamp at Thinkful. I enjoy 
                     the complexity of coding, as well as the ability to be innovative. 
                     As a creative person, coding allows me to manifest ideas in fun and 
@@ -54,15 +54,15 @@
                     to working with an amazing team of programmers to lead the way to new 
                     software innovations.
                 </p>
-                </p>
-                <p class="tab">When I’m not coding you will usually find me </p>
+                <br>
+                <p>When I’m not coding you will usually find me
                     sitting behind a blank canvas with a paint brush in my hand.  
                     Arts is a passion of mine that allows me to recreate 
                     the reality around me. I love spending time with my sons, dogs, 
                     friends and family whenever I can tear myself away from my computer.
                 </p>
             </div>
-            <a accesskey="home" id="home" href="../index.html">Home</a>
+            <a accesskey="home" id="home" href="../index.html"> Home </a>
         </section>
         <section id="projects">
             <h2>Projects</h2>
