working on media queries

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <h3>WEB DEVELOPER</h3>
             <p></p>
             <p class="zeeQuote">"Hi, I’m Zee
-              and I’m a Full Stack Developer
-              with Multimedia Marketing<br> 
+              and I’m a Full Stack Developer<br>
+              with Multimedia Marketing 
                 experience!"</p>
         </div>
         <nav role="navigation">
