media query for 700px complete

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </ul>
         </nav>
         <div class="quotes" id="js-quotes">
-            <h2>A man cannot sit down alone to plan for prosperity.</h2>
+            <p class='author-quote'>A man cannot sit down alone to plan for prosperity.</h2>
             <p class="quote-Author" id="js-quoteAuthor"> ~ Nigerian proverb</p>
         </div>
         <section id="about">
