finished css and ready for resubmission

--- a/index.html
+++ b/index.html
@@ -66,25 +66,22 @@
         </section>
         <section id="projects">
             <h2>Projects</h2>
-            <p>I am passionate about coding and excited to 
-                share with you some of my work.</p>
             <ul class="project" id="project">
                 <img class="zee-quizapp" src="QuizAppScreenshot.jpg" atl="space image of quiz app">
                 <h4>Title:</h4>
                 <li>Outer Space Quiz App</li>
-                <p></p>
+                <br>
                 <h4>Description:</h4>
                 <li>This app is designed to test users knowledge of space.  
                     It asks 5 multiple choice questions and lets the user know their 
                     progress along the way.  The user will know how well they scored at t
                     he end of the quiz.</li>
-                <p>
+                <br>
                 <h4>Technologies used: </h4>
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>JavaScript</li>
-                    <li>JQuery</li>
-                
+                    <li>JQuery</li><br>
                 <div class="liveAppLink">
                 <a href="https://thinkful-ei-heron.github.io/zee_shannon_quiz_app/">Live App</a>
                     <a href="https://github.com/thinkful-ei-heron/zee_shannon_quiz_app">GitHub Repo</a>
