--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     progress along the way.  The user will know how well they scored at t
                     he end of the quiz.</li>
                 <br>
-                <h4>Technologies used: </h4>
+                <h4>Technology Stack: </h4>
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>JavaScript</li>
@@ -85,7 +85,42 @@
                 <div class="liveAppLink">
                 <a href="https://thinkful-ei-heron.github.io/zee_shannon_quiz_app/">Live App</a>
                     <a href="https://github.com/thinkful-ei-heron/zee_shannon_quiz_app">GitHub Repo</a>
-                </div>    
+                </div>
+                
+                <img class="live-listapp" src="Screen Shot 2020-02-10 at 7.50.26 PM.png" alt="screenshot of black and pink landing page">
+                <h4>Title:</h4>
+                <li>Live List</li>
+                <br>
+                <h4>Description:</h4>
+                <li>Live List helps users find new places that other users visited and liked. It provides a customizable list from users 
+                    who have the inside track on what is going on. The user dashboard has the Hot Lists, where user can filter it by city. 
+                    User can also use hashtags of what playlist they are interested in. Using Live List is putting your entertainment 
+                    experience in the hands of the people who tried it. This application focuses on the enjoyment of being introduced to 
+                    something new. Using Live List will allow users to feel at home wherever they go. Live like the Locals with LIVE LIST!
+                </li>
+                <br>
+                <h4>Technology Stack:</h4>
+                    <ul>Front End:</ul>
+                        <li>HTML</li>
+                        <li>CSS3</li>
+                        <li>React</li>
+                        <li>JavaScript</li>
+                        <li>Cypress</li>
+                        <li>JWT-Decode</li>
+                        <li>Material UI</li>
+                        <li>APIs(GoogleMaps and Restaurants)</li>
+                        <li>Deployed in Netlify</li>
+                    <ul>Back End:</ul>
+                        <li>Node</li>
+                        <li>Express</li>
+                        <li>PostgreSql</li>
+                        <li>GeoCode</li>
+                        <li>Bcryptjs</li>
+                        <li>JWT</li>
+                        <li>Morgan</li>
+                        <li>Chai</li>
+                        <li>Supertest</li>
+                        <li>Deployed in Heroku</li>
             </ul>
             <a accesskey="home" id="home" href="../index.html">Home</a>
         </section>
