--- a/index.html
+++ b/index.html
@@ -101,14 +101,7 @@
                 <br>
                 <h4>Technology Stack:</h4>
                     <ul>Front End:</ul>
-                        <li>HTML</li>
-                        <li>CSS3</li>
-                        <li>React</li>
-                        <li>JavaScript</li>
-                        <li>Cypress</li>
-                        <li>JWT-Decode</li>
-                        <li>Material UI</li>
-                        <li>APIs(GoogleMaps and Restaurants)</li>
+                        <li>HTML, CSS3, React, JavaScript, Cypress, JWT-Decode, Material UI, APIs(GoogleMaps and Restaurants)</li>
                         <li>Deployed in Netlify</li>
                     <ul>Back End:</ul>
                         <li>Node</li>
