--- a/index.html
+++ b/index.html
@@ -78,12 +78,10 @@
                     he end of the quiz.</li>
                 <br>
                 <h4>Technology Stack: </h4>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                    <li>JQuery</li><br>
+                    <li>HTML, CSS, JavaScript, jQuery</li>
+                    <br>
                 <div class="liveAppLink">
-                <a href="https://thinkful-ei-heron.github.io/zee_shannon_quiz_app/">Live App</a>
+                    <a href="https://thinkful-ei-heron.github.io/zee_shannon_quiz_app/">Live App</a>
                     <a href="https://github.com/thinkful-ei-heron/zee_shannon_quiz_app">GitHub Repo</a>
                 </div>
                 
@@ -104,17 +102,16 @@
                         <li>HTML, CSS3, React, JavaScript, Cypress, JWT-Decode, Material UI, APIs(GoogleMaps and Restaurants)</li>
                         <li>Deployed in Netlify</li>
                     <ul>Back End:</ul>
-                        <li>Node</li>
-                        <li>Express</li>
-                        <li>PostgreSql</li>
-                        <li>GeoCode</li>
-                        <li>Bcryptjs</li>
-                        <li>JWT</li>
-                        <li>Morgan</li>
-                        <li>Chai</li>
-                        <li>Supertest</li>
+                        <li>Node, Express, PostgreSql, GeoCode, Bcryptjs, JWT, Morgan, Chai, Supertest</li>
                         <li>Deployed in Heroku</li>
-            </ul>
+                    </ul>
+                    <br>
+                <div class="liveAppLink">
+                    <a href="https://social-playlist.netlify.com/">Live App</a>
+                    <a href="https://github.com/thinkful-ei-heron/SocialPlaylist-Client.git">GitHub Repo: Front End</a>
+                    <a href="https://github.com/thinkful-ei-heron/SocialPlaylist-server">GitHub Repo: Back End</a>
+                </div>
+                <br>
             <a accesskey="home" id="home" href="../index.html">Home</a>
         </section>
         <section id="contact">
