--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <a href="https://github.com/thinkful-ei-heron/zee_shannon_quiz_app">GitHub Repo</a>
                 </div>
                 
-                <img class="live-listapp" src="Screen Shot 2020-02-10 at 7.50.26 PM.png" alt="screenshot of black and pink landing page">
+                <img class="live-listapp" src="livelist.jpg" alt="screenshot of black and pink landing page">
                 <h4>Title:</h4>
                 <li>Live List</li>
                 <br>
@@ -101,6 +101,7 @@
                     <ul>Front End:</ul>
                         <li>HTML, CSS3, React, JavaScript, Cypress, JWT-Decode, Material UI, APIs(GoogleMaps and Restaurants)</li>
                         <li>Deployed in Netlify</li>
+                    <br>
                     <ul>Back End:</ul>
                         <li>Node, Express, PostgreSql, GeoCode, Bcryptjs, JWT, Morgan, Chai, Supertest</li>
                         <li>Deployed in Heroku</li>
