--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <a href="https://github.com/thinkful-ei-heron/zee_shannon_quiz_app">GitHub Repo</a>
                 </div>
                 
-                <img class="live-listapp" src="livelist.jpg" alt="screenshot of black and pink landing page">
+                <img class="live-listapp" src="livelist.jpg" alt="black and pink landing page">
                 <h4>Title:</h4>
                 <li>Live List</li>
                 <br>
